--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -233,8 +233,10 @@ elseif (("${CMAKE_C_COMPILER_ID}" STREQUAL "GNU") OR ("${CMAKE_C_COMPILER_ID}" M
 	set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -ggdb")
 
 	if (X86)
-		set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mno-sse -mno-sse2")
-		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mno-sse -mno-sse2")
+		set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mno-sse")
+                set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mno-sse2")
+		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mno-sse")
+                set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mno-sse2")
 	endif()
 
 	set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -O2")
@@ -254,6 +256,9 @@ elseif (("${CMAKE_C_COMPILER_ID}" STREQUAL "GNU") OR ("${CMAKE_C_COMPILER_ID}" M
 			# -ioquake3 Makefile
 			set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mstackrealign")
 			set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mfpmath=387")
+	                set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mno-sse")
+        	        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mno-sse2")
+
 		endif()
 
 		if(WIN32)
@@ -276,6 +281,9 @@ elseif (("${CMAKE_C_COMPILER_ID}" STREQUAL "GNU") OR ("${CMAKE_C_COMPILER_ID}" M
 		if (X86)
 			set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mstackrealign")
 			set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mfpmath=387")
+        	        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mno-sse")
+	                set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mno-sse2")
+
 		endif()
 	elseif("${CMAKE_CXX_COMPILER_ID}" MATCHES "Clang")
 		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
