--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -233,10 +233,10 @@ elseif (("${CMAKE_C_COMPILER_ID}" STREQUAL "GNU") OR ("${CMAKE_C_COMPILER_ID}" M
 	set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -ggdb")
 
 	if (X86)
-		set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mno-sse")
-                set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mno-sse2")
-		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mno-sse")
-                set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mno-sse2")
+#		set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mno-sse")
+ #               set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mno-sse2")
+	#	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mno-sse")
+     #           set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mno-sse2")
 	endif()
 
 	set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -O2")
@@ -255,9 +255,9 @@ elseif (("${CMAKE_C_COMPILER_ID}" STREQUAL "GNU") OR ("${CMAKE_C_COMPILER_ID}" M
 			# corrupt the frame pointer in VM calls"
 			# -ioquake3 Makefile
 			set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mstackrealign")
-			set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mfpmath=387")
-	                set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mno-sse")
-        	        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mno-sse2")
+			set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -march=i386")
+	  #              set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mno-sse")
+       # 	        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mno-sse2")
 
 		endif()
 
@@ -280,9 +280,9 @@ elseif (("${CMAKE_C_COMPILER_ID}" STREQUAL "GNU") OR ("${CMAKE_C_COMPILER_ID}" M
 		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsigned-char")
 		if (X86)
 			set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mstackrealign")
-			set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mfpmath=387")
-        	        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mno-sse")
-	                set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mno-sse2")
+			set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=i386")
+     #   	        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mno-sse")
+	 #               set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mno-sse2")
 
 		endif()
 	elseif("${CMAKE_CXX_COMPILER_ID}" MATCHES "Clang")
