--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -229,12 +229,14 @@ elseif (("${CMAKE_C_COMPILER_ID}" STREQUAL "GNU") OR ("${CMAKE_C_COMPILER_ID}" M
 	set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -ggdb")
 
 	if (X86)
-#	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -msse2")
-#	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -msse2")
+		set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -msse")
+		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -msse")
+		set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -msse2")
+		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -msse2")
 	endif()
 
-	set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -O2")
-	set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O2")
+#	set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -O2")
+#	set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O2")
 
 	# enable somewhat modern C++
 	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
@@ -247,14 +249,9 @@ elseif (("${CMAKE_C_COMPILER_ID}" STREQUAL "GNU") OR ("${CMAKE_C_COMPILER_ID}" M
 		set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-comment")
 		set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fsigned-char")
 		if (X86)
-			# "x86 vm will crash without -mstackrealign since MMX
-			# instructions will be used no matter what and they
-			# corrupt the frame pointer in VM calls"
-			# -ioquake3 Makefile
-#			set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mstackrealign")
 			set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -march=i386")
-#			set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pipe")
-#                        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -masm=intel")
+			set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pipe")
+#                        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mfpmath=387")
 		endif()
 
 		if(WIN32)
@@ -275,9 +272,9 @@ elseif (("${CMAKE_C_COMPILER_ID}" STREQUAL "GNU") OR ("${CMAKE_C_COMPILER_ID}" M
 		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-comment")
 		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsigned-char")
 		if (X86)
-#			set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mstackrealign")
 			set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=i386")
-#                        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -masm=intel")
+                        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pipe")
+ #                       set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mfpmath=387")
 		endif()
 	elseif("${CMAKE_CXX_COMPILER_ID}" MATCHES "Clang")
 		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
