--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -229,12 +229,8 @@ elseif (("${CMAKE_C_COMPILER_ID}" STREQUAL "GNU") OR ("${CMAKE_C_COMPILER_ID}" M
 	set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -ggdb")
 
 	if (X86)
-                set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -msse")
-                set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -msse")
                 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -msse2")
                 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -msse2")
-		set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mmmx")
-		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mmmx")
 	endif()
 
 	set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -O2")
@@ -243,9 +239,6 @@ elseif (("${CMAKE_C_COMPILER_ID}" STREQUAL "GNU") OR ("${CMAKE_C_COMPILER_ID}" M
 	# enable somewhat modern C++
 	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
-	# enable support for multithreading
-	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pthread")
-        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
 	
 	if("${CMAKE_C_COMPILER_ID}" STREQUAL "GNU")
 		set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall")
@@ -253,10 +246,9 @@ elseif (("${CMAKE_C_COMPILER_ID}" STREQUAL "GNU") OR ("${CMAKE_C_COMPILER_ID}" M
 		set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fsigned-char")
 		if (X86)
                         set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mstackrealign")
-			set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mtune=native")
+                        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mfpmath=sse")
 			set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pipe")
-                       set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")
-                        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mfpmath=387")
+                        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")
 		endif()
 
 		if(WIN32)
@@ -278,10 +270,9 @@ elseif (("${CMAKE_C_COMPILER_ID}" STREQUAL "GNU") OR ("${CMAKE_C_COMPILER_ID}" M
 		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsigned-char")
 		if (X86)
                         set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mstackrealign")
-			set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mtune=native")
-                        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pipe")
+                        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mfpmath=sse")
+			set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pipe")
                         set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
-                       set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mfpmath=387")
 		endif()
 	elseif("${CMAKE_CXX_COMPILER_ID}" MATCHES "Clang")
 		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
