--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -246,7 +246,7 @@ elseif (("${CMAKE_C_COMPILER_ID}" STREQUAL "GNU") OR ("${CMAKE_C_COMPILER_ID}" M
 		set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fsigned-char")
 		if (X86)
 #                        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mstackrealign")
-                        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mfpmath=387")
+#                        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mfpmath=387")
                         set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")
                         set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pipe")
 		endif()
@@ -270,7 +270,7 @@ elseif (("${CMAKE_C_COMPILER_ID}" STREQUAL "GNU") OR ("${CMAKE_C_COMPILER_ID}" M
 		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsigned-char")
 		if (X86)
 #                        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mstackrealign")
-                        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mfpmath=387")
+#                        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mfpmath=387")
                         set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
                         set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pipe")
 
