--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -229,12 +229,12 @@ elseif (("${CMAKE_C_COMPILER_ID}" STREQUAL "GNU") OR ("${CMAKE_C_COMPILER_ID}" M
 	set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -ggdb")
 
 	if (X86)
-#                set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -msse2")
-#                set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -msse2")
+#               set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -msse2")
+#               set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -msse2")
 	endif()
 
-        set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -O2")
-        set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O2")
+#        set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -O2")
+#        set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O2")
 
 	# enable somewhat modern C++
 	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
@@ -246,9 +246,10 @@ elseif (("${CMAKE_C_COMPILER_ID}" STREQUAL "GNU") OR ("${CMAKE_C_COMPILER_ID}" M
 		set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fsigned-char")
 		if (X86)
 #                        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mstackrealign")
-#                        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mfpmath=387")
-                        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")
-                        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pipe")
+                         set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pipe")
+#                         set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mfpmath=sse")
+#                         set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")
+                         set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -unroll")
 		endif()
 
 		if(WIN32)
@@ -270,9 +271,10 @@ elseif (("${CMAKE_C_COMPILER_ID}" STREQUAL "GNU") OR ("${CMAKE_C_COMPILER_ID}" M
 		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsigned-char")
 		if (X86)
 #                        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mstackrealign")
-#                        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mfpmath=387")
-                        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
                         set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pipe")
+#                        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mfpmath=sse")
+#                        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
+                        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -unroll")
 
 		endif()
 	elseif("${CMAKE_CXX_COMPILER_ID}" MATCHES "Clang")
@@ -281,6 +283,7 @@ elseif (("${CMAKE_C_COMPILER_ID}" STREQUAL "GNU") OR ("${CMAKE_C_COMPILER_ID}" M
 		#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-deprecated-writable-strings")
 		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-comment")
 		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-invalid-offsetof")
+
 	endif()
 else()
 	message(ERROR "Unsupported compiler")
