--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -248,8 +248,9 @@ elseif (("${CMAKE_C_COMPILER_ID}" STREQUAL "GNU") OR ("${CMAKE_C_COMPILER_ID}" M
 #                        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mstackrealign")
                          set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pipe")
 #                         set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mfpmath=sse")
-#                         set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")
+                         set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")
                          set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -unroll")
+                         set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -march=i386")
 		endif()
 
 		if(WIN32)
@@ -273,9 +274,9 @@ elseif (("${CMAKE_C_COMPILER_ID}" STREQUAL "GNU") OR ("${CMAKE_C_COMPILER_ID}" M
 #                        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mstackrealign")
                         set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pipe")
 #                        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mfpmath=sse")
-#                        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
+                        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
                         set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -unroll")
-
+                        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=i386")
 		endif()
 	elseif("${CMAKE_CXX_COMPILER_ID}" MATCHES "Clang")
 		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
