--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -247,9 +247,9 @@ elseif (("${CMAKE_C_COMPILER_ID}" STREQUAL "GNU") OR ("${CMAKE_C_COMPILER_ID}" M
 		set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fsigned-char")
 		if (X86)
 #                        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mstackrealign")
-                         set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pipe")
+#                         set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pipe")
 #                         set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mfpmath=sse")
-                         set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")
+#                         set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")
                          set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -unroll")
 		endif()
 
@@ -272,9 +272,9 @@ elseif (("${CMAKE_C_COMPILER_ID}" STREQUAL "GNU") OR ("${CMAKE_C_COMPILER_ID}" M
 		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsigned-char")
 		if (X86)
 #                        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mstackrealign")
-                        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pipe")
+#                        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pipe")
 #                        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mfpmath=sse")
-                        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
+#                        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
                         set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -unroll")
 		endif()
 	elseif("${CMAKE_CXX_COMPILER_ID}" MATCHES "Clang")
