--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -229,28 +229,28 @@ elseif (("${CMAKE_C_COMPILER_ID}" STREQUAL "GNU") OR ("${CMAKE_C_COMPILER_ID}" M
 	set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -ggdb")
 
 	if (X86)
-               set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -msse2")
-               set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -msse2")
+#               set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -msse2")
+#              set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -msse2")
 	endif()
 
-        set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -O2")
-        set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O2")
+        set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE}  -march=i386 -flto -Ofast -Wlto-type-mismatch")
+        set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -march=i386 -flto -Ofast -Wlto-type-mismatch")
 
 	# enable somewhat modern C++
 	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
-        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c99")
-#        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ")
+#        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c99")
+        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ")
 
 	if("${CMAKE_C_COMPILER_ID}" STREQUAL "GNU")
 		set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall")
 		set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-comment")
 		set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fsigned-char")
 		if (X86)
-                        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mstackrealign")
-#                         set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pipe")
-                         set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mfpmath=sse")
-#                         set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")
-                         set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -unroll")
+#                       set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mstackrealign")
+                       set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pipe")
+#                       set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mfpmath=sse")
+#                       set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fno-strict-overflow")
+                       set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -unroll")
 		endif()
 
 		if(WIN32)
@@ -271,10 +271,10 @@ elseif (("${CMAKE_C_COMPILER_ID}" STREQUAL "GNU") OR ("${CMAKE_C_COMPILER_ID}" M
 		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-comment")
 		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsigned-char")
 		if (X86)
-                        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mstackrealign")
-#                        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pipe")
-                        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mfpmath=sse")
-#                        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
+#                        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mstackrealign")
+                        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pipe")
+#                        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mfpmath=sse")
+#                        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-strict-overflow")
                         set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -unroll")
 		endif()
 	elseif("${CMAKE_CXX_COMPILER_ID}" MATCHES "Clang")
