--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -233,8 +233,8 @@ elseif (("${CMAKE_C_COMPILER_ID}" STREQUAL "GNU") OR ("${CMAKE_C_COMPILER_ID}" M
 #              set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -msse2")
 	endif()
 
-        set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE}  -march=i386 -flto -Ofast -Wlto-type-mismatch")
-        set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -march=i386 -flto -Ofast -Wlto-type-mismatch")
+        set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -Ofast")
+        set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Ofast")
 
 	# enable somewhat modern C++
 	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
@@ -246,11 +246,11 @@ elseif (("${CMAKE_C_COMPILER_ID}" STREQUAL "GNU") OR ("${CMAKE_C_COMPILER_ID}" M
 		set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-comment")
 		set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fsigned-char")
 		if (X86)
-#                       set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mstackrealign")
+                       set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mstackrealign")
                        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pipe")
 #                       set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mfpmath=sse")
-#                       set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fno-strict-overflow")
                        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -unroll")
+                       set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fno-math-errno")
 		endif()
 
 		if(WIN32)
@@ -271,11 +271,11 @@ elseif (("${CMAKE_C_COMPILER_ID}" STREQUAL "GNU") OR ("${CMAKE_C_COMPILER_ID}" M
 		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-comment")
 		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsigned-char")
 		if (X86)
-#                        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mstackrealign")
+                        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mstackrealign")
                         set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pipe")
-#                        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mfpmath=sse")
-#                        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-strict-overflow")
+#                       set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mfpmath=sse")
                         set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -unroll")
+
 		endif()
 	elseif("${CMAKE_CXX_COMPILER_ID}" MATCHES "Clang")
 		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
